--- a/style.css
+++ b/style.css
@@ -2,3 +2,8 @@
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+.header{
+    display: flex;
+    justify-content: space-between;
+}
