--- a/style.css
+++ b/style.css
@@ -7,3 +7,9 @@
     display: flex;
     justify-content: space-between;
 }
+
+.logo img{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
