i changed color of my ul li a content and removed the underline and i added a padding

--- a/style.css
+++ b/style.css
@@ -24,3 +24,9 @@
     display: flex;
     list-style-type: none;
 }
+
+.navbar a{
+    color: #ffffff;
+    text-decoration: none;
+    padding: 7px;
+}
