i changed color of my title and size of it

--- a/style.css
+++ b/style.css
@@ -30,3 +30,9 @@
     text-decoration: none;
     padding: 7px;
 }
+
+.logo-name{
+    color: #ffffff;
+    font-size: 20px;
+    font-weight: bold;
+}
