--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@
     background-color: rgb(0, 21, 79);
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    padding: 0 2rem;
 }
 
 .logo img{
