--- a/style.css
+++ b/style.css
@@ -66,4 +66,5 @@ aside, main{
     height: 600px;
     padding: 1rem;
     border-radius: 40px;
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.1);
 }
